--- a/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/activity_find_player.xml
@@ -80,6 +80,15 @@
             android:layout_width="match_parent"
             android:layout_weight="1"
             />
+
+        <Button
+            android:id="@+id/let_me_see_textView"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"
+            android:textColor="#FFF"
+            android:textStyle="italic"
+            android:text="@string/address_textView"/>
+
     </TableRow>
     <TableRow
         android:layout_marginLeft="30sp"
