--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
@@ -8,70 +8,60 @@
     android:background="#68AC61">
 
     <TableLayout
+        android:id="@+id/tableLayout1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/tableLayout1">
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="4dp">
 
 
         <TableRow
-            android:layout_marginTop="5sp"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="10sp"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/plus_image_my_team1"
-                android:src="@drawable/add"
-                android:layout_marginStart="20sp"
-                android:layout_height="match_parent"
-                android:layout_width="30sp"/>
+            android:layout_marginTop="5sp">
 
-            <TextView
+            <Button
+                android:id="@+id/search_team_my_team_button"
                 android:layout_width="match_parent"
-                android:textSize="30sp"
-                android:layout_weight="1"
-                android:textColor="#000000"
-                android:layout_marginStart="15sp"
                 android:layout_height="wrap_content"
-                android:text="@string/search_team_my_team_text_view"
-                android:id="@+id/search_team_my_team_text_view"/>
+                android:layout_marginStart="15sp"
+                android:layout_weight="1"
+                android:background="#FFF"
+                android:text="@string/search_team_my_team_button"
+                android:textColor="#68AC61"
+                android:textSize="15sp" />
+
+            <Button
+                android:id="@+id/add_new_team_my_team_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="#FFF"
+                android:layout_marginStart="15sp"
+                android:layout_marginEnd="15sp"
+                android:layout_weight="1"
+                android:text="@string/add_new_team_my_team_button"
+                android:textColor="#68AC61"
+                android:textSize="15sp" />
 
         </TableRow>
 
-        <TableRow
-            android:layout_marginTop="5sp"
-            android:layout_marginBottom="10sp">
-            <ImageView
-                android:id="@+id/plus_image_my_team"
-                android:src="@drawable/add"
-                android:layout_marginStart="20sp"
-                android:layout_height="match_parent"
-                android:layout_width="30sp"/>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:textSize="30sp"
-                android:layout_weight="1"
-                android:textColor="#000000"
-                android:layout_marginStart="15sp"
-                android:layout_height="wrap_content"
-                android:text="@string/add_new_team_my_team"
-                android:id="@+id/add_new_team_my_team_text_view"/>
+        <TableRow>
 
         </TableRow>
-
 
     </TableLayout>
 
     <ListView
         android:id="@+id/list_view_my_team"
         android:layout_width="match_parent"
-        android:layout_height="288dp"
+        android:layout_height="wrap_content"
 
-        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout1" />
+        app:layout_constraintTop_toBottomOf="@+id/tableLayout1"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 
