--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
@@ -18,9 +18,10 @@
         <TableRow
             android:layout_height="wrap_content"
             android:layout_marginBottom="10sp"
-            android:layout_marginTop="5sp">
+            android:layout_marginTop="10sp">
 
             <Button
+                android:padding="5sp"
                 android:id="@+id/search_team_my_team_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -32,6 +33,7 @@
                 android:textSize="15sp" />
 
             <Button
+                android:padding="5sp"
                 android:id="@+id/add_new_team_my_team_button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
