--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_filter.xml
@@ -14,7 +14,8 @@
         android:layout_gravity="right"
         android:text="@string/restore_all"
         android:textAlignment="center"
-        android:textColor="#008000"
+        android:background="#68AC61"
+        android:textColor="#FFF"
         android:textSize="15sp"
         android:textStyle="italic"
         android:visibility="visible" />
@@ -26,6 +27,7 @@
             android:id="@+id/order"
             android:layout_weight="1"
             android:text="@string/order"
+            android:textColor="#68AC61"
             android:textSize="22sp"
             android:textStyle="italic" />
 
@@ -45,6 +47,7 @@
         <TextView
             android:id="@+id/matchType"
             android:layout_weight="1"
+            android:textColor="#68AC61"
             android:text="@string/match_type"
             android:textSize="22sp"
             android:textStyle="italic" />
@@ -59,6 +62,7 @@
 
         <TextView
             android:id="@+id/distance"
+            android:textColor="#68AC61"
             android:layout_weight="1"
             android:text="@string/distance"
             android:textSize="22sp"
@@ -68,12 +72,13 @@
             android:id="@+id/seekBarDistance"
             android:layout_weight="1"
             android:progress="0"
-            android:max="50"/>
+            android:max="50" />
 
         <TextView
             android:id="@+id/percent_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textColor="#68AC61"
             android:text="@string/percentage"/>
 
     </TableRow>
@@ -82,6 +87,8 @@
         android:layout_marginTop="10sp">
 
         <Button
+            android:background="#68AC61"
+            android:textColor="#FFF"
             android:id="@+id/provaBottone"
             android:layout_span="2"
             android:layout_weight="1"
