--- a/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
+++ b/TESI/WhoPlays/app/src/main/res/layout/fragment_my_team.xml
@@ -1,70 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<TableLayout android:orientation="vertical"
+    android:background="#68AC61"
+    android:id="@+id/tableLayout1"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#68AC61">
-
-    <TableLayout
-        android:id="@+id/tableLayout1"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="4dp">
+    android:layout_height="wrap_content"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 
         <TableRow
             android:layout_height="wrap_content"
-            android:layout_marginBottom="10sp"
-            android:layout_marginTop="10sp">
+            android:layout_marginBottom="5sp"
+            android:layout_marginTop="15sp">
 
             <Button
-                android:padding="5sp"
                 android:id="@+id/search_team_my_team_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:text="@string/search_team_my_team_button"
+                android:padding="5sp"
                 android:layout_marginStart="15sp"
                 android:layout_weight="1"
-                android:background="#FFF"
-                android:text="@string/search_team_my_team_button"
                 android:textColor="#68AC61"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_button_bg"
+
+                />
 
             <Button
-                android:padding="5sp"
+                android:text="@string/add_new_team_my_team_button"
                 android:id="@+id/add_new_team_my_team_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="#FFF"
+                android:padding="5sp"
                 android:layout_marginStart="15sp"
                 android:layout_marginEnd="15sp"
                 android:layout_weight="1"
-                android:text="@string/add_new_team_my_team_button"
                 android:textColor="#68AC61"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/my_button_bg"
+                />
 
         </TableRow>
 
         <TableRow>
+            <ListView
+                android:layout_span="2"
+                android:layout_weight="1"
+                android:id="@+id/list_view_my_team"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" />
 
         </TableRow>
 
-    </TableLayout>
-
-    <ListView
-        android:id="@+id/list_view_my_team"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tableLayout1"
-        app:layout_constraintVertical_bias="0.0" />
 
 
 
-</android.support.constraint.ConstraintLayout>
+
+</TableLayout>
